# lilygo_device_driver

./: CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
src/: config.h  lilygo_device_driver_library.h  tool.cpp  tool.h
src/chip/esp32p4/: esp32p4_driver.cpp  esp32p4_driver.h
src/device/t-glasses-p4/: t_glasses_p4_config.h  t_glasses_p4_driver.h
src/device/t_display_p4/: t_display_p4_config.h  t_display_p4_driver.cpp  t_display_p4_driver.h  t_display_p4_keyboard_config.h
src/device/t_display_p4_air/: t_display_p4_air_config.h  t_display_p4_air_driver.cpp  t_display_p4_air_driver.h
src/device/t_glasses_p4/: t_glasses_p4_config.h  t_glasses_p4_driver.cpp  t_glasses_p4_driver.h
src/device/t_spe/: t_spe_config.h  t_spe_driver.h
src/screen/gz030pcc02/: gz030pcc02_driver.cpp  gz030pcc02_driver.h
src/screen/icn6211/: icn6211_driver.cpp  icn6211_driver.h
