if(CONFIG_DEVICE_T_GLASSES_P4)
    set(
            src_dirs 
            "./src/"
            "./src/chip/esp32p4/"
            "./src/device/t-glasses-p4/"
            "./src/screen/gz030pcc02/"
            "./src/camera/ov2710/"
            "./src/camera/sc2336/"
    )
endif()
    
idf_component_register(
        SRC_DIRS 
        ${src_dirs} 
        INCLUDE_DIRS 
        ${src_dirs} 
        REQUIRES 
        "driver"
        "esp_lcd"
    )