if(CONFIG_DEVICE_T_GLASSES_P4)
    set(
            src_dirs 
            "./src/"
            "./src/chip/esp32p4/"
            "./src/device/t_glasses_p4/"
            "./src/camera/ov2710/"
            "./src/camera/sc2336/"
    )
elseif(CONFIG_DEVICE_T_DISPLAY_P4_AIR)
    set(
            src_dirs 
            "./src/"
            "./src/chip/esp32p4/"
            "./src/device/t_display_p4_air/"
            "./src/camera/ov2710/"
            "./src/camera/sc2336/"
        )
elseif(CONFIG_DEVICE_T_SPE)
    set(
            src_dirs 
            "./src/"
            "./src/device/t_spe/"
        )
endif()
    
idf_component_register(
        SRC_DIRS 
        ${src_dirs} 
        INCLUDE_DIRS 
        ${src_dirs} 
        REQUIRES 
        "driver"
        "fatfs"
        "spiffs"
    )